--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cloudpickle==3.1.1
 comm==0.2.2
 cons==0.4.6
 contourpy==1.3.1
+cramjam==2.9.1
 cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
@@ -20,8 +21,10 @@ distro==1.9.0
 dotenv==0.9.9
 etuples==0.3.9
 executing==2.2.0
+fastparquet==2024.11.0
 filelock==3.18.0
 fonttools==4.56.0
+fsspec==2025.3.0
 gprofiler-official==1.0.0
 h11==0.14.0
 h5netcdf==1.6.1
@@ -61,6 +64,7 @@ prompt_toolkit==3.0.50
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
