--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 jiter==0.9.0
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
@@ -78,6 +79,7 @@ pyzmq==26.3.0
 regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
+scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
 setuptools==76.1.0
